syntax = "proto3";

package Simple;
//option csharp_namespace = "Google.Protobuf.Examples.AddressBook";

message Bet {
    string horse = 1;
    int32 id = 2;
    int64 amt = 3;

    enum BetType {
        WIN = 0;
        EACHWAY = 1;
    }

    BetType type = 4;
    Timestamp last_updated = 5;
}

message BetResponse {
    int32 id = 1;
    int32 clientId = 2;

    enum Status {
        Ack = 0;
        Nack = 1;
    }

    Status status = 3;
}

message RacePosition {
    string Horse = 1;
    int32 position = 2;
    string currentOdds = 3;
}

message RaceStream {
    repeated RacePosition position = 1;
}

message Empty {

}

message Timestamp {
    // Represents seconds of UTC time since Unix epoch
    // 1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to
    // 9999-12-31T23:59:59Z inclusive.
    int64 seconds = 1;

    // Non-negative fractions of a second at nanosecond resolution. Negative
    // second values with fractions must still have non-negative nanos values
    // that count forward in time. Must be from 0 to 999,999,999
    // inclusive.
    int32 nanos = 2;
  }

service Better {
    rpc PlaceBet (Bet) returns (BetResponse) {}
    rpc RaceStatus (Empty) returns (stream RaceStream) {}
}